# veda-odd

./: .gitignore  .pre-commit-config.yaml  404.html  FY26-roadmap.html  LICENSE  README.md  fy26-roadmap.html  fy26-roadmap.md  index.html  mkdocs.yml  output.md  pyproject.toml  roadmap.md  sitemap.xml  team.toml
.github/ISSUE_TEMPLATE/: dataset-delivery.md  objective.md  pi-planning-task-list.md
.github/workflows/: deploy.yml  static.yml  update-reports.yml
adopting/: index.html
docs/: adopting.md  fy26-roadmap.md  index.md  objectives.md  products.md  roadmap.md  tech-tips.md
docs/dse-architecture-vision/: index.html  todos.md
fy26-roadmap/: index.html
nldas_benchmarking/: README.md  create_stac_item.ipynb  create_stac_item.py  helpers.py  interim-report.md  requirements.txt
nldas_benchmarking/00_nccs-to-s3/: copy_files.sh
nldas_benchmarking/01_create_intake_stac/: create_stac_item.ipynb  rechunk.ipynb  test_helpers.py  test_rechunked.ipynb  test_tiling.ipynb  testing_search_options.ipynb
nldas_benchmarking/01_rechunk/: rechunk.ipynb
nldas_benchmarking/02_tests/: chunk_sizes.ipynb  test_helpers.py  tiling_test.ipynb  timeseries_test.ipynb
nldas_benchmarking/create_intake_stac/: helpers.py  (+3 more)
objectives/: index.html
products/: index.html
reports/: README.md  _objectives_data.json  _objectives_data.py  analyze_downloads.py  config.py  constants.py  generate_config.py  generate_docs.py  main.py  objectives.py  plot.py  pyproject.toml  settings.py  virtualizarr-report.tsv
roadmap/: index.html
search/: search_index.json
tech-tips/: index.html
(+24 files in other folders)
