[project]
name = "veda-odd"
version = "0.1.0"
description = "Optimized data delivery for NASA VEDA and EODC"
readme = "README.md"
dependencies = []
requires-python = ">= 3.12"

[dependency-groups]
dev = [
    "dse-oss-reports @ git+https://github.com/NASA-IMPACT/dse-oss-reports.git@33eb4f01af27504d3a35e32fbbc679435e300b5b", # v0.2.0
    "mike>=2.1.3",
    "mkdocs-material[imaging]>=9.6.3",
    "mkdocs-jupyter>=0.25.0",
    "mkdocs-redirects>=1.2.2",
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=1.13.0",
    "mkdocstrings>=0.27.0",
    "markdown-exec[ansi]",
    "pip>=24.2",
    "pytest-asyncio>=0.24.0",
    "pytest-mypy-plugins>=3.2.0",
    "pytest>=8.3.3",
    "ruff>=0.12.0",
]
